==> snailtrailorg/bluethroat/documents/reference/component/mcu/WCH/RISC-V/CH592/CH592EVT/EXAM/TOUCH/TKYLIB/Touch.c <==
#include "Touch.h"
#define WAKEUPTIME  50     //Sleep Time = 250 * SLEEP_TRIGGER_TIME(100ms) = 25s

void touch_GPIOModeCfg(GPIOModeTypeDef mode)
{
    uint32_t pina = tkyPinAll.PaBit;
    uint32_t pinb = tkyPinAll.PbBit;
    switch(mode)
    {
        case GPIO_ModeIN_Floating:
        	R32_PA_PD_DRV &= ~pina;
        	R32_PA_PU &= ~pina;
        	R32_PA_DIR &= ~pina;
        	R32_PB_PD_DRV &= ~pinb;
        	R32_PB_PU &= ~pinb;
        	R32_PB_DIR &= ~pinb;
            break;

        case GPIO_ModeOut_PP_5mA:
            R32_PA_PU &= ~pina;
            R32_PA_PD_DRV &= ~pina;
            R32_PA_DIR |= pina;
            R32_PB_PU &= ~pinb;
            R32_PB_PD_DRV &= ~pinb;
            R32_PB_DIR |= pinb;
            break;
        default:
            break;
    }
}

static void touch_Channelinit(void)
{
    uint8_t error_flag = 0;
    uint16_t chx_mean = 0;

    for(uint8_t i = 0; i < TKY_MAX_QUEUE_NUM; i++)
    {
    	TKY_CHInit(my_tky_ch_init[i]);
    }

    for(uint8_t i = 0; i < TKY_MAX_QUEUE_NUM; i++)
    {

    	chx_mean = TKY_GetCurChannelMean(my_tky_ch_init[i].channelNum, my_tky_ch_init[i].chargeTime,
										 my_tky_ch_init[i].disChargeTime, 1000);

    	if(chx_mean < 3400 || chx_mean > 3800)
    	{
    		error_flag = 1;
    	}
    	else
    	{
    		TKY_SetCurQueueBaseLine(i, chx_mean);
    	}
    	dg_log("queue : %d ch : %d , mean : %d\n",i,my_tky_ch_init[i].channelNum,chx_mean);

    }
    //充放电基线值异常，重新校准基线值
    if(error_flag != 0)
    {
    	touch_GPIOSleep();  //拉低所有触摸pin脚
        dg_log("\n\nCharging parameters error, preparing for recalibration ...\n\n");
        uint8_t charge_time;
        for (uint8_t i = 0; i < TKY_MAX_QUEUE_NUM; i++) {       //按最大序列数进行ADC通道转换
          charge_time = 0,chx_mean = 0;
          touch_IOSetAdcState(my_tky_ch_init[i].channelNum);
          while (1)
          {
              chx_mean = TKY_GetCurChannelMean(my_tky_ch_init[i].channelNum, charge_time,3, 1000);

//              dg_log("testing .... chg : %d, baseline : %d\n",charge_time,chx_mean);//打印基线值

              if ((charge_time == 0) && ((chx_mean > 3800))) {//低于最小充电参数
                  dg_log("Error, %u KEY%u Too small Cap,Please check the hardware !\r\n",chx_mean,i);
                  break;
              }
              else {
                  if ((chx_mean > 3200) &&(chx_mean < 3800)) {//充电参数正常
                      TKY_SetCurQueueBaseLine(i, chx_mean);
                      TKY_SetCurQueueChargeTime(i,charge_time,3);
                      dg_log("channel:%u, chargetime:%u,BaseLine:%u\r\n",
                            i, charge_time, chx_mean);
                      break;
                  }else if(chx_mean >= 3800)
                  {
                	  TKY_SetCurQueueBaseLine(i, TKY_GetCurChannelMean(my_tky_ch_init[i].channelNum, charge_time-1,3, 20));
                	  TKY_SetCurQueueChargeTime(i,charge_time-1,3);
                	  dg_log("Warning,channel:%u Too large Current, chargetime:%u,BaseLine:%u\r\n",
                	                              i, charge_time, chx_mean);
                	  break;
                  }
                  charge_time++;
                  if (charge_time > 0x1f) {    //超出最大充电参数
                      dg_log("Error, Chargetime Max,KEY%u Too large Cap,Please check the hardware !\r\n",i);
                      break;
                  }
              }
          }
          touch_SingleChDischarge(my_tky_ch_init[i].channelNum);
//          GPIOA_ModeCfg(TKY_Pin[my_tky_ch_init[i].channelNum],GPIO_ModeIN_Floating);
        }
    }
    TKY_SaveAndStop();
}
